welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean={
	avance()
	getCouleurSol()
	recule()
	if(getCouleurSol()==Color.green){
		avance();
	} else { 
		recule();
	}

}   
